--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -1185,7 +1185,8 @@ img{
 }
 
 .main-menu .navigation > li > ul > li.dropdown > a:after{
-	font-family: 'FontAwesome';
+	font-family: 'Font Awesome 5 Free';
+	font-weight: 900;
 	content: "\f105";
 	position:absolute;
 	right:15px;
@@ -1264,7 +1265,8 @@ img{
 }
 
 .main-menu .navigation > li > ul > li > ul > li.dropdown > a:after{
-	font-family: 'FontAwesome';
+	font-family: 'Font Awesome 5 Free';
+	font-weight: 900;
 	content: "\f105";
 	position:absolute;
 	right:10px;
@@ -2973,9 +2975,13 @@ img{
 	padding-left:25px;
 }
 
-.main-footer .contact-list li .icon{
+.main-footer li .icon{
+	width: 18px;
 	position:absolute;
-	left:0px;
+	left:0;
+	bottom: 50%;
+	margin-bottom: -7px;
+	text-align: center;
 	color:var(--brand-primary);
 }
 
@@ -6310,7 +6316,8 @@ img{
 	overflow: hidden;
 	background: transparent;
 	text-align: center;
-	font-family: 'FontAwesome';
+	font-family: 'Font Awesome 5 Free';
+	font-weight: 900;
 	/* -webkit-transition: max-width 500ms ease; */
 	/* -moz-transition: max-width 500ms ease; */
 	/* -ms-transition: max-width 500ms ease; */
@@ -6406,7 +6413,8 @@ img{
 	overflow: hidden;
 	background: transparent;
 	text-align: center;
-	font-family: 'FontAwesome';
+	font-family: 'Font Awesome 5 Free';
+	font-weight: 900;
 	/* -webkit-transition: max-width 500ms ease; */
 	/* -moz-transition: max-width 500ms ease; */
 	/* -ms-transition: max-width 500ms ease; */
@@ -7662,4 +7670,12 @@ img{
 
 .copy-code__btn:hover {
 	background: #dcdcdc;
+}
+
+.pull-left {
+	float: left;
+}
+
+.fa-pull-right {
+	float: right;
 }
