Updated Font Awesome to v5.15.4 and added links to the footer (#32)
* updated Font Awesome to v5.15.4

* added links to twitter and discord

* deleted telegram link

--- a/qdrant-landing/themes/qdrant/layouts/partials/footer.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/footer.html
@@ -15,7 +15,7 @@
                 <h4>Contact us</h4>
               </div>
               <ul class="contact-list">
-                <li><span class="icon fa fa-map-o"></span> {{ .Site.Params.location }}</li>
+                <li><span class="icon fa fa-map"></span> {{ .Site.Params.location }}</li>
                 <li><span class="icon fa fa-envelope"></span> <a href="mailto:{{ .Site.Params.email }}">{{ .Site.Params.email }}</a></li>
               </ul>
             </div>
@@ -85,10 +85,10 @@
               </div>
 
               <ul class="social-box">
-                <li><a href="{{ .Site.Params.github }}" target="_blank"><i class="flaticon-github"></i></a></li>
-                <li><a href="{{ .Site.Params.linkedin }}" target="_blank"><i class="flaticon-linkedin"></i></a></li>
-                <li><a href="{{ .Site.Params.telegram }}" target="_blank"><i
-                        class="flaticon-telegram"></i></a></li>
+                <li><a href="{{ .Site.Params.github }}" target="_blank"><i class="fab fa-github"></i></a></li>
+                <li><a href="{{ .Site.Params.linkedin }}" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="{{ .Site.Params.twitter }}" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="{{ .Site.Params.discord }}" target="_blank"><i class="fab fa-discord"></i></a></li>
               </ul>
 
             </div>
