added recent news to the article page

--- a/qdrant-landing/themes/qdrant/layouts/articles/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/articles/single.html
@@ -6,6 +6,8 @@
             {{ .Scratch.Set "scope" "single" }}
             {{ partial "blogpost" .}}
         </div>
+
+        {{ partial "recent_news" . }}
     </div>
 </section>
 
