--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -6233,7 +6233,7 @@ img {
   font-size: 16px;
   line-height: 1.3em;
   margin-top: 12px;
-  margin-bottom: 40px;
+  margin-bottom: 25px;
 }
 
 /* Styled Form */
@@ -7630,6 +7630,10 @@ img {
 
 .pull-right {
   float: right;
+}
+
+.asterisk {
+  color: var(--brand-primary);
 }
 
 /*# sourceMappingURL=main.css.map */
