--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -6178,7 +6178,7 @@ img{
 	font-size:16px;
 	line-height:1.3em;
 	margin-top:12px;
-	margin-bottom:40px;
+	margin-bottom:25px;
 }
 
 /* Styled Form */
@@ -7596,3 +7596,6 @@ img{
 	float: right;
 }
 
+.asterisk {
+	color: var(--brand-primary);
+}
