fixes, changed layout, added credits page, mobile fixes

--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -6193,7 +6193,11 @@ img {
 ***/
 .login-page-section {
   position: relative;
-  padding: 95px 0px 0px;
+}
+@media (min-width: 992px) {
+  .login-page-section {
+    padding: 95px 0px 0px;
+  }
 }
 
 .login-page-section .image-column {
