--- a/qdrant-landing/themes/qdrant/layouts/subscribe/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/subscribe/list.html
@@ -1,4 +1,4 @@
-{{ define "main" }}
+{{ partial "header" . }}
 
 <style>
 	#mc_embed_signup input.mce_inline_error {
@@ -11,12 +11,23 @@
         background-color: transparent;
 		color:var(--brand-primary);
 	}
-
+    .main-header {
+        background-image: url(/images/background/2.png);
+    }
+    #mce-success-response {
+		padding-bottom: 25px;
+		color: green;
+		font-size: 140%;
+    }
+    #mce-error-response {
+		padding-bottom: 25px;
+		color: red;
+	}
 </style>
 
 <!-- Contact Page Section -->
-<section class="login-page-section mb-5">
-    <div class="auto-container">
+<section class="login-page-section">
+    <div class="auto-container mt-lg-5 pt-lg-5 mb-lg-5 pb-lg-4">
         <div class="row clearfix">
 
             <!-- Image Column -->
@@ -34,7 +45,6 @@
                     <h3>Sign up for our newsletter</h3>
                     <div class="welcome"><span class="theme_color">Never miss our news</span> about latest releases and updates.</div>
 
-                    <div class="indicates-required text-right"><span class="asterisk">*</span> indicates required</div>
                     <!-- Contact Form -->
                     <div class="contact-form" id="mc_embed_signup">
 
@@ -57,7 +67,7 @@
                                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_69617d79374ac6280dd2230b2_acb2b876fc" tabindex="-1" value=""></div>
                                 <div class="form-group">
                                     <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="theme-btn btn-style-three">
-                                        <span class="txt">Send Message</span>
+                                        <span class="txt">Subscribe</span>
                                     </button>
                                 </div>
                             </div>
@@ -77,5 +87,5 @@
 
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 
-<!--<a href='https://de.freepik.com/vektoren/geschaeft'>Geschäft Vektor erstellt von storyset - de.freepik.com</a>-->
-{{ end }}
+
+{{ partial "footer" . }}
