--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -6138,7 +6138,10 @@ img{
 
 .login-page-section{
 	position:relative;
-	padding:95px 0px 0px;
+
+	@media (min-width: 992px) {
+		padding:95px 0px 0px;
+	}
 }
 
 .login-page-section .image-column{
