changed the form title

--- a/qdrant-landing/themes/qdrant/layouts/subscribe/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/subscribe/list.html
@@ -42,8 +42,8 @@
             <!-- Form Column -->
             <div class="form-column col-lg-6 col-md-12 col-sm-12 mb-5">
                 <div class="inner-column">
-                    <h3>Sign up for our newsletter</h3>
-                    <div class="welcome"><span class="theme_color">Never miss our news</span> about latest releases and updates.</div>
+                    <h3>Sign up for our <span class="theme_color">newsletter</span></h3>
+                    <div class="welcome">Never miss our news, latest releases and updates.</div>
 
                     <!-- Contact Form -->
                     <div class="contact-form" id="mc_embed_signup">
