--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -6138,7 +6138,10 @@ img{
 
 .login-page-section{
 	position:relative;
-	padding:95px 0px 0px;
+
+	@media (min-width: 992px) {
+		padding:95px 0px 0px;
+	}
 }
 
 .login-page-section .image-column{
@@ -6178,7 +6181,7 @@ img{
 	font-size:16px;
 	line-height:1.3em;
 	margin-top:12px;
-	margin-bottom:40px;
+	margin-bottom:25px;
 }
 
 /* Styled Form */
@@ -7596,3 +7599,6 @@ img{
 	float: right;
 }
 
+.asterisk {
+	color: var(--brand-primary);
+}
