--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -717,6 +717,15 @@ img{
 	color:#ff5b00;
 }
 
+.sec-title h5{
+	position:relative;
+	color:#2b2a41;
+	font-size: 36px;
+	font-weight:700;
+	line-height:1.2em;
+	margin-bottom:0px;
+}
+
 /*** 
 
 ====================================================================
