--- a/qdrant-landing/themes/qdrant/layouts/articles/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/articles/single.html
@@ -1,21 +1,42 @@
 {{ define "main" }}
-<section class="auto-container pt-5 single-page">
+<div class="auto-container pt-5 single-page">
     <div class="row clearfix">
         <!-- Content Side -->
-        <div class="content-side col-lg-12 col-md-12 col-sm-12">
+        <section class="content-side col-lg-12 col-md-12 col-sm-12">
             {{ .Scratch.Set "scope" "single" }}
             {{ partial "blogpost" .}}
-        </div>
+        </section>
 
-        {{ partial "recent_news" . }}
+        <!-- Contact Form -->
+        <section class="content-column offset-lg-3 col-lg-6 col-md-12 col-sm-12">
+            <div class="col-12 sec-title text-center mb-3">
+                <h5>Get <span>Updates</span> from Qdrant</h5>
+            </div>
+
+            <!-- Newsletter Form -->
+            <div class="newsletter-form">
+                <form action="{{ .Site.Params.mailchimp_subscribe }}" method="post" id="mc-embedded-subscribe-form"
+                      name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <div class="form-group">
+                        <input type="email" name="EMAIL" value="" placeholder="Enter Your Email" required=""
+                               id="mce-EMAIL">
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                            <input type="text" name="{{ .Site.Params.mailchimp_subscribe_id }}" tabindex="-1" value="">
+                        </div>
+                        <button type="submit" class="theme-btn btn-style-three"><span class="txt">Subscribe</span>
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <!-- End of Contact Form -->
 
         <!-- Social Media Links -->
-        <section class="col-12 contact-info-section">
+        <section class="col-12 contact-info-section pt-3">
             <div class="auto-container">
                 <!-- Sec Title -->
-                <div class="sec-title centered">
-                    <h2>Join our <span>Community</span></h2>
-                    <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+                <div class="sec-title centered mb-0">
+                    <h5>Join our <span>Community</span></h5>
                 </div>
                 <div class="inner-container">
                     <div class="row clearfix">
@@ -24,8 +45,10 @@
                         <div class="info-column col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-column pl-0 text-center">
                                 <ul>
-                                    <li><a href="{{ .Site.Params.discord }}" target="_blank"><i class="fab fa-discord"></i> Discord</a></li>
-                                    <li><a href="{{ .Site.Params.twitter }}" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
+                                    <li><a href="{{ .Site.Params.discord }}" target="_blank"><i
+                                            class="fab fa-discord"></i> Discord</a></li>
+                                    <li><a href="{{ .Site.Params.twitter }}" target="_blank"><i
+                                            class="fab fa-twitter"></i> Twitter</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -34,8 +57,10 @@
                         <div class="info-column col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-column pl-0 text-center">
                                 <ul>
-                                    <li><a href="{{ .Site.Params.linkedin }}" target="_blank"><i class="fab fa-linkedin"></i> Linkedin</a></li>
-                                    <li><a href="{{ .Site.Params.facebook }}" target="_blank"><i class="fab fa-facebook"></i> Facebook</a></li>
+                                    <li><a href="{{ .Site.Params.linkedin }}" target="_blank"><i
+                                            class="fab fa-linkedin"></i> Linkedin</a></li>
+                                    <li><a href="{{ .Site.Params.facebook }}" target="_blank"><i
+                                            class="fab fa-facebook"></i> Facebook</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -44,7 +69,8 @@
                         <div class="info-column col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-column pl-0 text-center">
                                 <ul>
-                                    <li><a href="{{ .Site.Params.github }}" target="_blank"><i class="fab fa-github"></i> Github</a></li>
+                                    <li><a href="{{ .Site.Params.github }}" target="_blank"><i
+                                            class="fab fa-github"></i> Github</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -55,15 +81,8 @@
         </section>
         <!-- End of Social Media Links -->
 
-        <div class="col-6 offset-3 mb-5">
-            <div class="sec-title centered">
-                <h2>Subscribe to our <span>Newsletter</span></h2>
-            </div>
-
-            {{ partial "subscribe-form" . }}
-        </div>
-
+        {{ partial "recent_news" . }}
     </div>
-</section>
+</div>
 
 {{ end }}
