--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -6899,7 +6899,7 @@ img{
 
 .contact-info-section .info-column ul li a{
 	position:relative;
-	color:#5a5a5a;
+	//color:#5a5a5a;
 	font-size:15px;
 	/* transition:all 500ms ease; */
 	/* -moz-transition:all 500ms ease; */
@@ -6909,7 +6909,7 @@ img{
 }
 
 .contact-info-section .info-column ul li a:hover{
-	color:var(--brand-primary);
+	//color:var(--brand-primary);
 }
 
 .contact-info-section .info-column .text{
