--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -101,12 +101,25 @@
                             
                             {{ $currentPage := . }}
                             {{ range .Site.Menus.main }}
-                            <li {{if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}class="current"{{end}}><a href="{{ .URL }}">{{ .Name }}</a></li>
-                            {{ end }}
+                            <li class="{{if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}current{{end}} dropdown"><a href="#">{{ .Name }}
+                              {{ if .HasChildren }}
+                              <i class="fas fa-chevron-down"></i>                              </a>
+                              <ul>
+                                  {{ range .Children }}
+                                  <li><a href="{{ .URL }}" {{ if .Params.external }}target="_blank"{{ end }}>
+                                      {{ if .Pre }} {{ .Pre }}&nbsp;{{ end }}
+                                      {{ .Name }}
+                                  </a></li>
+                                  {{ end }}
+                              </ul>
+                              {{ else }}
+                              </a>
+                              {{ end }}
 
-                            <!-- <li class="current"><a href="index.html">Home</a></li>
-                            <li><a href="solutions.html">Solutions</a></li>
-                            <li><a href="documentation.html">Documentation</a></li> -->
+                            </li>
+
+                           {{ end }}
+
                           </ul>
                         </div>
           
