--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -10094,6 +10094,64 @@ article:first-of-type figure {
   text-align: center;
 }
 
+.btn_in-header {
+  padding: 0.1rem 0.5rem;
+  line-height: 1;
+  background: var(--white);
+}
+.btn_in-header:before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  content: "";
+  background-color: var(--brand-primary);
+  -webkit-transform: scale(0, 1);
+  -ms-transform: scale(0, 1);
+  transform: scale(0, 1);
+  -webkit-transform-origin: top right;
+  -ms-transform-origin: top right;
+  transform-origin: top right;
+  -webkit-transition: transform 500ms cubic-bezier(0.86, 0, 0.07, 1);
+  -moz-transition: transform 500ms cubic-bezier(0.86, 0, 0.07, 1);
+  -o-transition: transform 500ms cubic-bezier(0.86, 0, 0.07, 1);
+  transition: transform 500ms cubic-bezier(0.86, 0, 0.07, 1);
+  -webkit-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+  -moz-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+  -o-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+  transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+  border-radius: inherit;
+}
+.btn_in-header:hover::before {
+  display: block;
+  -webkit-transform: scale(1, 1);
+  -ms-transform: scale(1, 1);
+  transform: scale(1, 1);
+  -webkit-transform-origin: bottom left;
+  -ms-transform-origin: bottom left;
+  transform-origin: bottom left;
+}
+.btn_in-header .btn__text {
+  color: var(--brand-primary);
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 16px;
+  position: relative;
+  z-index: 1;
+}
+.btn_in-header i {
+  vertical-align: inherit;
+  margin-right: 0.4rem;
+}
+.btn_in-header:hover .btn__text {
+  color: var(--white);
+}
+
+.fixed-header .btn_in-header {
+  border-color: var(--brand-primary);
+}
+
 /* copy button for documentation */
 /* ##bem */
 .copy-code {
@@ -11230,8 +11288,10 @@ img {
 }
 
 .main-menu .navigation {
+  display: flex;
+  align-items: center;
   position: static;
-  margin: 0px;
+  margin: 0;
 }
 
 .main-menu .navigation > li {
@@ -11249,7 +11309,7 @@ img {
   margin-right: 0px;
 }
 
-.main-menu .navigation > li > a {
+.main-menu .navigation > .navigation__item > .navigation__link {
   position: relative;
   display: block;
   color: #ffffff;
@@ -11503,7 +11563,7 @@ img {
   padding-top: 0px;
 }
 
-.main-header.fixed-header .main-menu .navigation > li > a {
+.main-header.fixed-header .main-menu .navigation > .navigation__item > .navigation__link {
   padding: 27px 0px;
 }
 
