--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -56,6 +56,7 @@
 
 @import "article";
 
+@import "blocks/button";
 @import "blocks/copy-btn";
 @import "blocks/hero-code";
 @import "blocks/widget-header";
@@ -1078,8 +1079,10 @@ img{
 }
 
 .main-menu .navigation{
+	display: flex;
+	align-items: center;
 	position:static;
-	margin:0px;
+	margin:0;
 }
 
 .main-menu .navigation > li{
@@ -1097,7 +1100,7 @@ img{
 	margin-right:0px;
 }
 
-.main-menu .navigation > li > a{
+.main-menu .navigation > .navigation__item > .navigation__link {
 	position:relative;
 	display:block;
 	color:#ffffff;
@@ -1351,7 +1354,7 @@ img{
 	padding-top:0px;
 }
 
-.main-header.fixed-header .main-menu .navigation > li > a{
+.main-header.fixed-header .main-menu .navigation > .navigation__item > .navigation__link{
 	padding:27px 0px;
 }
 
