--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -10872,6 +10872,15 @@ img {
   color: #ff5b00;
 }
 
+.sec-title h5 {
+  position: relative;
+  color: #2b2a41;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.2em;
+  margin-bottom: 0px;
+}
+
 /*** 
 
 ====================================================================
@@ -16979,17 +16988,12 @@ img {
 
 .contact-info-section .info-column ul li a {
   position: relative;
-  color: #5a5a5a;
   font-size: 15px;
   /* transition:all 500ms ease; */
   /* -moz-transition:all 500ms ease; */
   /* -webkit-transition:all 500ms ease; */
   /* -ms-transition:all 500ms ease; */
   /* -o-transition:all 500ms ease; */
-}
-
-.contact-info-section .info-column ul li a:hover {
-  color: var(--brand-primary);
 }
 
 .contact-info-section .info-column .text {
